@@ -418,6 +418,15 @@ assert(p != NULL);
 	if (tscolor && hcolor && ohcolor && !(hcolor & ohcolor))
 	    continue;
 
+	/* Snarf the original install time from older package(s). */
+	he->tag = RPMTAG_ORIGINTIME;
+	xx = headerGet(oh, he, 0);
+	if (xx && he->p.ui32p != NULL) {
+	    if (p->originTime == 0 || p->originTime > he->p.ui32p[0])
+		p->originTime = he->p.ui32p[0];
+	    he->p.ptr = _free(he->p.ptr);
+	}
+
 	/* Skip identical packages. */
 	if (rpmHeadersIdentical(h, oh))
 	    continue;
@@ -430,15 +439,6 @@ assert(lastx >= 0 && lastx < ts->orderCount);
 
 	/* Chain through upgrade flink. */
 	xx = rpmteChain(p, q, oh, "Upgrades");
-
-	/* Snarf the original install time from older package(s). */
-	he->tag = RPMTAG_ORIGINTIME;
-	xx = headerGet(oh, he, 0);
-	if (xx && he->p.ui32p != NULL) {
-	    if (p->originTime == 0 || p->originTime > he->p.ui32p[0])
-		p->originTime = he->p.ui32p[0];
-	    he->p.ptr = _free(he->p.ptr);
-	}
 
 /*@-nullptrarith@*/
 	rpmlog(RPMLOG_DEBUG, D_("   upgrade erases %s\n"), rpmteNEVRA(q));
