@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: retrieve old originTime earlier to include identical package replace.
     - jbj: fix: functional "-N-V-R.A" erasures-within-upgrade transactions.
     - jbj: fix: retrieve originTime from old, not new, header.
     - jbj: permit "-N-V-R.A" erasure args within install/upgrade transactions.
